sintatico/bison/clang_syntax.output
Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList declaration
    3                | declaration

    4 declaration: varDeclaration
    5            | funcDeclaration

    6 varDeclaration: simpleVDeclaration ';'

    7 funcDeclaration: simpleFDeclaration '(' params ')' compoundStmt
    8                | simpleFDeclaration '(' ')' compoundStmt

    9 params: params ',' param
   10       | param

   11 param: simpleVDeclaration

   12 simpleVDeclaration: TYPE ID

   13 simpleFDeclaration: TYPE ID

   14 compoundStmt: '{' localDeclarations stmtList '}'
   15             | '{' stmtList '}'

   16 localDeclarations: localDeclarations varDeclaration
   17                  | localDeclarations error
   18                  | varDeclaration

   19 stmtList: stmtList primitiveStmt
   20         | primitiveStmt

   21 primitiveStmt: exprStmt
   22              | compoundStmt
   23              | condStmt
   24              | iterStmt
   25              | returnStmt
   26              | setStmt

   27 exprStmt: expression ';'

   28 condStmt: IF_KW '(' simpleExp ')' compoundStmt
   29         | IF_KW '(' simpleExp ')' compoundStmt ELSE_KW compoundStmt

   30 iterStmt: FOR_KW '(' assignExp ';' simpleExp ';' assignExp ')' compoundStmt

   31 returnStmt: RETURN_KW expression ';'

   32 setStmt: forallOP

   33 pertOP: simpleExp IN_KW ID
   34       | simpleExp IN_KW setReturner

   35 setReturner: addOP
   36            | remOP

   37 typeOP: ISSET_KW '(' ID ')'

   38 addOP: ADD_KW '(' pertOP ')'

   39 remOP: REMOVE_KW '(' pertOP ')'

   40 selectOP: EXISTS_KW '(' pertOP ')'

   41 forallOP: FORALL_KW '(' pertOP ')' compoundStmt

   42 expression: assignExp
   43           | simpleExp
   44           | setReturner
   45           | inOP
   46           | outOP

   47 assignExp: ID ASS_OP expression

   48 simpleExp: binLogicalExp
   49          | pertOP
   50          | selectOP
   51          | typeOP

   52 constOP: INT
   53        | FLOAT
   54        | EMPTY

   55 inOP: IN '(' ID ')'

   56 outOP: OUT '(' outConst ')'

   57 outConst: STRING
   58         | CHAR
   59         | simpleExp

   60 binLogicalExp: binLogicalExp BIN_LOG_OP unLogicalExp
   61              | unLogicalExp

   62 unLogicalExp: UN_LOG_OP unLogicalExp
   63             | relationalExp

   64 relationalExp: relationalExp REL_OP sumExp
   65              | sumExp

   66 sumExp: sumExp SUM_OP mulExp
   67       | mulExp

   68 mulExp: mulExp MUL_OP factor
   69       | factor
   70       | SUM_OP factor

   71 factor: ID
   72       | functionCall
   73       | '(' simpleExp ')'
   74       | constOP

   75 functionCall: ID '(' callParams ')'

   76 callParams: callParams ',' simpleExp
   77           | simpleExp


Terminals, with rules where they appear

    $end (0) 0
    '(' <token> (40) 7 8 28 29 30 37 38 39 40 41 55 56 73 75
    ')' <token> (41) 7 8 28 29 30 37 38 39 40 41 55 56 73 75
    ',' <token> (44) 9 76
    ';' <token> (59) 6 27 30 31
    '{' <token> (123) 14 15
    '}' <token> (125) 14 15
    error (256) 17
    INT <token> (258) 52
    FLOAT <token> (259) 53
    EMPTY <token> (260) 54
    IF_KW <token> (261) 28 29
    ELSE_KW <token> (262) 29
    FOR_KW <token> (263) 30
    FORALL_KW <token> (264) 41
    RETURN_KW <token> (265) 31
    IN_KW <token> (266) 33 34
    ISSET_KW <token> (267) 37
    ADD_KW <token> (268) 38
    REMOVE_KW <token> (269) 39
    EXISTS_KW <token> (270) 40
    OUT <token> (271) 56
    IN <token> (272) 55
    TYPE <token> (273) 12 13
    ID <token> (274) 12 13 33 37 47 55 71 75
    SUM_OP <token> (275) 66 70
    MUL_OP <token> (276) 68
    BIN_LOG_OP <token> (277) 60
    UN_LOG_OP <token> (278) 62
    REL_OP <token> (279) 64
    ASS_OP <token> (280) 47
    STRING <token> (281) 57
    CHAR <token> (282) 58


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    program <node> (35)
        on left: 1
        on right: 0
    declarationList <node> (36)
        on left: 2 3
        on right: 1 2
    declaration <node> (37)
        on left: 4 5
        on right: 2 3
    varDeclaration <node> (38)
        on left: 6
        on right: 4 16 18
    funcDeclaration <node> (39)
        on left: 7 8
        on right: 5
    params <node> (40)
        on left: 9 10
        on right: 7 9
    param <node> (41)
        on left: 11
        on right: 9 10
    simpleVDeclaration <node> (42)
        on left: 12
        on right: 6 11
    simpleFDeclaration <node> (43)
        on left: 13
        on right: 7 8
    compoundStmt <node> (44)
        on left: 14 15
        on right: 7 8 22 28 29 30 41
    localDeclarations <node> (45)
        on left: 16 17 18
        on right: 14 16 17
    stmtList <node> (46)
        on left: 19 20
        on right: 14 15 19
    primitiveStmt <node> (47)
        on left: 21 22 23 24 25 26
        on right: 19 20
    exprStmt <node> (48)
        on left: 27
        on right: 21
    condStmt <node> (49)
        on left: 28 29
        on right: 23
    iterStmt <node> (50)
        on left: 30
        on right: 24
    returnStmt <node> (51)
        on left: 31
        on right: 25
    setStmt <node> (52)
        on left: 32
        on right: 26
    pertOP <node> (53)
        on left: 33 34
        on right: 38 39 40 41 49
    setReturner <node> (54)
        on left: 35 36
        on right: 34 44
    typeOP <node> (55)
        on left: 37
        on right: 51
    addOP <node> (56)
        on left: 38
        on right: 35
    remOP <node> (57)
        on left: 39
        on right: 36
    selectOP <node> (58)
        on left: 40
        on right: 50
    forallOP <node> (59)
        on left: 41
        on right: 32
    expression <node> (60)
        on left: 42 43 44 45 46
        on right: 27 31 47
    assignExp <node> (61)
        on left: 47
        on right: 30 42
    simpleExp <node> (62)
        on left: 48 49 50 51
        on right: 28 29 30 33 34 43 59 73 76 77
    constOP <node> (63)
        on left: 52 53 54
        on right: 74
    inOP <node> (64)
        on left: 55
        on right: 45
    outOP <node> (65)
        on left: 56
        on right: 46
    outConst <node> (66)
        on left: 57 58 59
        on right: 56
    binLogicalExp <node> (67)
        on left: 60 61
        on right: 48 60
    unLogicalExp <node> (68)
        on left: 62 63
        on right: 60 61 62
    relationalExp <node> (69)
        on left: 64 65
        on right: 63 64
    sumExp <node> (70)
        on left: 66 67
        on right: 64 65 66
    mulExp <node> (71)
        on left: 68 69 70
        on right: 66 67 68
    factor <node> (72)
        on left: 71 72 73 74
        on right: 68 69 70
    functionCall <node> (73)
        on left: 75
        on right: 72
    callParams <node> (74)
        on left: 76 77
        on right: 75 76


State 0

    0 $accept: • program $end

    TYPE  shift, and go to state 1

    program             go to state 2
    declarationList     go to state 3
    declaration         go to state 4
    varDeclaration      go to state 5
    funcDeclaration     go to state 6
    simpleVDeclaration  go to state 7
    simpleFDeclaration  go to state 8


State 1

   12 simpleVDeclaration: TYPE • ID
   13 simpleFDeclaration: TYPE • ID

    ID  shift, and go to state 9


State 2

    0 $accept: program • $end

    $end  shift, and go to state 10


State 3

    1 program: declarationList •
    2 declarationList: declarationList • declaration

    TYPE  shift, and go to state 1

    $end  reduce using rule 1 (program)

    declaration         go to state 11
    varDeclaration      go to state 5
    funcDeclaration     go to state 6
    simpleVDeclaration  go to state 7
    simpleFDeclaration  go to state 8


State 4

    3 declarationList: declaration •

    $end  reduce using rule 3 (declarationList)
    TYPE  reduce using rule 3 (declarationList)


State 5

    4 declaration: varDeclaration •

    $end  reduce using rule 4 (declaration)
    TYPE  reduce using rule 4 (declaration)


State 6

    5 declaration: funcDeclaration •

    $end  reduce using rule 5 (declaration)
    TYPE  reduce using rule 5 (declaration)


State 7

    6 varDeclaration: simpleVDeclaration • ';'

    ';'  shift, and go to state 12


State 8

    7 funcDeclaration: simpleFDeclaration • '(' params ')' compoundStmt
    8                | simpleFDeclaration • '(' ')' compoundStmt

    '('  shift, and go to state 13


State 9

   12 simpleVDeclaration: TYPE ID •
   13 simpleFDeclaration: TYPE ID •

    '('  reduce using rule 13 (simpleFDeclaration)
    ';'  reduce using rule 12 (simpleVDeclaration)


State 10

    0 $accept: program $end •

    $default  accept


State 11

    2 declarationList: declarationList declaration •

    $end  reduce using rule 2 (declarationList)
    TYPE  reduce using rule 2 (declarationList)


State 12

    6 varDeclaration: simpleVDeclaration ';' •

    $end  reduce using rule 6 (varDeclaration)
    TYPE  reduce using rule 6 (varDeclaration)


State 13

    7 funcDeclaration: simpleFDeclaration '(' • params ')' compoundStmt
    8                | simpleFDeclaration '(' • ')' compoundStmt

    TYPE  shift, and go to state 14
    ')'   shift, and go to state 15

    params              go to state 16
    param               go to state 17
    simpleVDeclaration  go to state 18


State 14

   12 simpleVDeclaration: TYPE • ID

    ID  shift, and go to state 19


State 15

    8 funcDeclaration: simpleFDeclaration '(' ')' • compoundStmt

    '{'  shift, and go to state 20

    compoundStmt  go to state 21


State 16

    7 funcDeclaration: simpleFDeclaration '(' params • ')' compoundStmt
    9 params: params • ',' param

    ')'  shift, and go to state 22
    ','  shift, and go to state 23


State 17

   10 params: param •

    ')'  reduce using rule 10 (params)
    ','  reduce using rule 10 (params)


State 18

   11 param: simpleVDeclaration •

    ')'  reduce using rule 11 (param)
    ','  reduce using rule 11 (param)


State 19

   12 simpleVDeclaration: TYPE ID •

    ')'  reduce using rule 12 (simpleVDeclaration)
    ','  reduce using rule 12 (simpleVDeclaration)


State 20

   14 compoundStmt: '{' • localDeclarations stmtList '}'
   15             | '{' • stmtList '}'

    INT        shift, and go to state 24
    FLOAT      shift, and go to state 25
    EMPTY      shift, and go to state 26
    IF_KW      shift, and go to state 27
    FOR_KW     shift, and go to state 28
    FORALL_KW  shift, and go to state 29
    RETURN_KW  shift, and go to state 30
    ISSET_KW   shift, and go to state 31
    ADD_KW     shift, and go to state 32
    REMOVE_KW  shift, and go to state 33
    EXISTS_KW  shift, and go to state 34
    OUT        shift, and go to state 35
    IN         shift, and go to state 36
    TYPE       shift, and go to state 147
    ID         shift, and go to state 37
    SUM_OP     shift, and go to state 38
    UN_LOG_OP  shift, and go to state 39
    '{'        shift, and go to state 148
    '('        shift, and go to state 40

    varDeclaration      go to state 41
    simpleVDeclaration  go to state 149
    compoundStmt        go to state 42
    localDeclarations   go to state 43
    stmtList            go to state 44
    primitiveStmt       go to state 45
    exprStmt            go to state 46
    condStmt            go to state 47
    iterStmt            go to state 48
    returnStmt          go to state 49
    setStmt             go to state 50
    pertOP              go to state 51
    setReturner         go to state 52
    typeOP              go to state 53
    addOP               go to state 54
    remOP               go to state 55
    selectOP            go to state 56
    forallOP            go to state 57
    expression          go to state 58
    assignExp           go to state 59
    simpleExp           go to state 60
    constOP             go to state 61
    inOP                go to state 62
    outOP               go to state 63
    binLogicalExp       go to state 64
    unLogicalExp        go to state 65
    relationalExp       go to state 66
    sumExp              go to state 67
    mulExp              go to state 68
    factor              go to state 69
    functionCall        go to state 70


State 21

    8 funcDeclaration: simpleFDeclaration '(' ')' compoundStmt •

    $end  reduce using rule 8 (funcDeclaration)
    TYPE  reduce using rule 8 (funcDeclaration)


State 22

    7 funcDeclaration: simpleFDeclaration '(' params ')' • compoundStmt

    '{'  shift, and go to state 20

    compoundStmt  go to state 71


State 23

    9 params: params ',' • param

    TYPE  shift, and go to state 14

    param               go to state 72
    simpleVDeclaration  go to state 18


State 24

   52 constOP: INT •

    IN_KW       reduce using rule 52 (constOP)
    SUM_OP      reduce using rule 52 (constOP)
    MUL_OP      reduce using rule 52 (constOP)
    BIN_LOG_OP  reduce using rule 52 (constOP)
    REL_OP      reduce using rule 52 (constOP)
    ';'         reduce using rule 52 (constOP)


State 25

   53 constOP: FLOAT •

    IN_KW       reduce using rule 53 (constOP)
    SUM_OP      reduce using rule 53 (constOP)
    MUL_OP      reduce using rule 53 (constOP)
    BIN_LOG_OP  reduce using rule 53 (constOP)
    REL_OP      reduce using rule 53 (constOP)
    ';'         reduce using rule 53 (constOP)


State 26

   54 constOP: EMPTY •

    IN_KW       reduce using rule 54 (constOP)
    SUM_OP      reduce using rule 54 (constOP)
    MUL_OP      reduce using rule 54 (constOP)
    BIN_LOG_OP  reduce using rule 54 (constOP)
    REL_OP      reduce using rule 54 (constOP)
    ';'         reduce using rule 54 (constOP)


State 27

   28 condStmt: IF_KW • '(' simpleExp ')' compoundStmt
   29         | IF_KW • '(' simpleExp ')' compoundStmt ELSE_KW compoundStmt

    '('  shift, and go to state 73


State 28

   30 iterStmt: FOR_KW • '(' assignExp ';' simpleExp ';' assignExp ')' compoundStmt

    '('  shift, and go to state 74


State 29

   41 forallOP: FORALL_KW • '(' pertOP ')' compoundStmt

    '('  shift, and go to state 75


State 30

   31 returnStmt: RETURN_KW • expression ';'

    INT        shift, and go to state 24
    FLOAT      shift, and go to state 25
    EMPTY      shift, and go to state 26
    ISSET_KW   shift, and go to state 31
    ADD_KW     shift, and go to state 32
    REMOVE_KW  shift, and go to state 33
    EXISTS_KW  shift, and go to state 34
    OUT        shift, and go to state 35
    IN         shift, and go to state 36
    ID         shift, and go to state 37
    SUM_OP     shift, and go to state 38
    UN_LOG_OP  shift, and go to state 39
    '('        shift, and go to state 40

    pertOP         go to state 51
    setReturner    go to state 52
    typeOP         go to state 53
    addOP          go to state 54
    remOP          go to state 55
    selectOP       go to state 56
    expression     go to state 76
    assignExp      go to state 59
    simpleExp      go to state 60
    constOP        go to state 61
    inOP           go to state 62
    outOP          go to state 63
    binLogicalExp  go to state 64
    unLogicalExp   go to state 65
    relationalExp  go to state 66
    sumExp         go to state 67
    mulExp         go to state 68
    factor         go to state 69
    functionCall   go to state 70


State 31

   37 typeOP: ISSET_KW • '(' ID ')'

    '('  shift, and go to state 77


State 32

   38 addOP: ADD_KW • '(' pertOP ')'

    '('  shift, and go to state 78


State 33

   39 remOP: REMOVE_KW • '(' pertOP ')'

    '('  shift, and go to state 79


State 34

   40 selectOP: EXISTS_KW • '(' pertOP ')'

    '('  shift, and go to state 80


State 35

   56 outOP: OUT • '(' outConst ')'

    '('  shift, and go to state 81


State 36

   55 inOP: IN • '(' ID ')'

    '('  shift, and go to state 82


State 37

   47 assignExp: ID • ASS_OP expression
   71 factor: ID •
   75 functionCall: ID • '(' callParams ')'

    ASS_OP  shift, and go to state 83
    '('     shift, and go to state 84

    IN_KW       reduce using rule 71 (factor)
    SUM_OP      reduce using rule 71 (factor)
    MUL_OP      reduce using rule 71 (factor)
    BIN_LOG_OP  reduce using rule 71 (factor)
    REL_OP      reduce using rule 71 (factor)
    ';'         reduce using rule 71 (factor)


State 38

   70 mulExp: SUM_OP • factor

    INT    shift, and go to state 24
    FLOAT  shift, and go to state 25
    EMPTY  shift, and go to state 26
    ID     shift, and go to state 85
    '('    shift, and go to state 40

    constOP       go to state 61
    factor        go to state 86
    functionCall  go to state 70


State 39

   62 unLogicalExp: UN_LOG_OP • unLogicalExp

    INT        shift, and go to state 24
    FLOAT      shift, and go to state 25
    EMPTY      shift, and go to state 26
    ID         shift, and go to state 85
    SUM_OP     shift, and go to state 38
    UN_LOG_OP  shift, and go to state 39
    '('        shift, and go to state 40

    constOP        go to state 61
    unLogicalExp   go to state 87
    relationalExp  go to state 66
    sumExp         go to state 67
    mulExp         go to state 68
    factor         go to state 69
    functionCall   go to state 70


State 40

   73 factor: '(' • simpleExp ')'

    INT        shift, and go to state 150
    FLOAT      shift, and go to state 151
    EMPTY      shift, and go to state 152
    ISSET_KW   shift, and go to state 153
    EXISTS_KW  shift, and go to state 154
    ID         shift, and go to state 155
    SUM_OP     shift, and go to state 156
    UN_LOG_OP  shift, and go to state 157
    '('        shift, and go to state 158

    pertOP         go to state 159
    typeOP         go to state 160
    selectOP       go to state 161
    simpleExp      go to state 88
    constOP        go to state 162
    binLogicalExp  go to state 163
    unLogicalExp   go to state 164
    relationalExp  go to state 165
    sumExp         go to state 166
    mulExp         go to state 167
    factor         go to state 168
    functionCall   go to state 169


State 41

   18 localDeclarations: varDeclaration •

    error      reduce using rule 18 (localDeclarations)
    INT        reduce using rule 18 (localDeclarations)
    FLOAT      reduce using rule 18 (localDeclarations)
    EMPTY      reduce using rule 18 (localDeclarations)
    IF_KW      reduce using rule 18 (localDeclarations)
    FOR_KW     reduce using rule 18 (localDeclarations)
    FORALL_KW  reduce using rule 18 (localDeclarations)
    RETURN_KW  reduce using rule 18 (localDeclarations)
    ISSET_KW   reduce using rule 18 (localDeclarations)
    ADD_KW     reduce using rule 18 (localDeclarations)
    REMOVE_KW  reduce using rule 18 (localDeclarations)
    EXISTS_KW  reduce using rule 18 (localDeclarations)
    OUT        reduce using rule 18 (localDeclarations)
    IN         reduce using rule 18 (localDeclarations)
    TYPE       reduce using rule 18 (localDeclarations)
    ID         reduce using rule 18 (localDeclarations)
    SUM_OP     reduce using rule 18 (localDeclarations)
    UN_LOG_OP  reduce using rule 18 (localDeclarations)
    '{'        reduce using rule 18 (localDeclarations)
    '('        reduce using rule 18 (localDeclarations)


State 42

   22 primitiveStmt: compoundStmt •
